# ioniq2mqtt

./: .gitignore  Cargo.toml  build.rs  build.sh
cereal/: car.capnp  log.capnp
src/: hass.rs  main.rs  obd_data.rs
