[package]
name = "ioniq2mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.20"
anyhow = "1"
tmq = "0.4.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
capnpc = "0.20"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install capnproto
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install capnproto"
]